--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       property="og:image"
       content="https://images.unsplash.com/photo-1602751584552-8ba73aad10e1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=786&q=80"
     />
-    <!-- TODO:after hosting <meta property="og:url" content="https://www.wwcelebrities.com/2018/10/8-tips-fashion-help.html" /> -->
+    <meta
+      property="og:url"
+      content="https://khaledtaymour.github.io/mangata-and-gallo-jewelrys-store/#/"
+    />
     <meta
       property="og:description"
       content="Mangata and Gallo is a jewelry store that specializes in special occasions like engagements, weddings and anniversaries. The jewelry company primarily operates online and has a small storefront in Austin, Texas with an atelier attached for browsing. Mangata & Gallo's selection of jewelry is known for its high-quality and classic look. The owner, an Austin local, is well known for her jewelry designs."
